devops/ocp/examples/networking/cross-dc-ingress-test/manifests/namespace.example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cross-dc-ingress-test
  labels:
    app.kubernetes.io/part-of: cross-dc-replication
  annotations:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
