devops/ocp/examples/networking/cross-dc-ingress-test/manifests/echo-service.example.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: cross-dc-ingress-test
  labels:
    app: echo
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
